--- a/PedidoVenda/pom.xml
+++ b/PedidoVenda/pom.xml
@@ -20,29 +20,29 @@
 			<scope>compile</scope>
 		</dependency>-->
     
-		<!-- Núcleo do Hibernate 
+		<!-- Núcleo do Hibernate -->
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
 			<version>4.3.8.Final</version>
 			<scope>compile</scope>
-		</dependency>-->
+		</dependency>
 		
-		<!-- Implementação de EntityManager da JPA 
+		<!-- Implementação de EntityManager da JPA -->
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-entitymanager</artifactId>
 			<version>4.3.8.Final</version>
 			<scope>compile</scope>
-		</dependency>-->
+		</dependency>
 
-		<!-- Driver JDBC do MySQL 
+		<!-- Driver JDBC do MySQL -->
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<version>5.1.34</version>
 			<scope>compile</scope>
-		</dependency>-->
+		</dependency>
     
     	<!-- Weld (implementação do CDI) -->
         <dependency>
