--- a/PedidoVenda/pom.xml
+++ b/PedidoVenda/pom.xml
@@ -12,13 +12,13 @@
 
     <dependencies>
     
-    	<!-- Implementacao do Bean Validation 
+    	<!-- Implementacao do Bean Validation -->
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-validator</artifactId>
 			<version>5.1.3.Final</version>
 			<scope>compile</scope>
-		</dependency>-->
+		</dependency>
     
 		<!-- Núcleo do Hibernate -->
 		<dependency>
